--- a/live/_Generator-Document.cshtml
+++ b/live/_Generator-Document.cshtml
@@ -4,7 +4,9 @@
 
 @{
   var printToken = CmsContext.Page.Parameters["token"];
-  var isAuthorized = CmsContext.User.IsSiteAdmin || printToken == "vMmrEXtRjKWE9G3GTnO0";
+  var pdfService = CreateInstance("./Services/PdfService.cs");
+
+  var isAuthorized = CmsContext.User.IsSiteAdmin || printToken == pdfService.GetToken();
 }
 
 @if (!isAuthorized) {
